{
    "name": "InputMap",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "0fb13d15-0cff-4656-a0c0-b9012bc5e9a8",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "7a8cc506-5be5-42bc-96ab-2d353e2bc497",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchStart",
                    "type": "Button",
                    "id": "5a2a01ee-4624-48eb-a46f-a5eff11a1a87",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "aaa9cb48-645f-4be3-be22-3bcd073f3afe",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9441cf00-eee1-49ba-ab7d-0b8070b9f328",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9264db5f-bb0a-4a8c-992c-5299afadf873",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f6254c4-6d7b-4ce8-8c20-8d647484069b",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}